Home - Fix centering on mobile

--- a/public/stylesheets/Source/styles.scss
+++ b/public/stylesheets/Source/styles.scss
@@ -244,18 +244,6 @@ section
 		background: linear-gradient(to bottom, rgba(0, 0, 0, 0.25) 0, rgba(0,0,0,.25) 15%, rgba(0,0,0,0) 100%);
 	}
 
-	// &:nth-child(odd)
-	// {
-	// 	background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.25) 0, rgba(0,0,0,.25) 15%, rgba(0,0,0,0) 100%);
-	// 	background: linear-gradient(to bottom, rgba(0, 0, 0, 0.25) 0, rgba(0,0,0,.25) 15%, rgba(0,0,0,0) 100%);
-	// }
-
-	// &:nth-child(even)
-	// {
-	// 	background: -webkit-linear-gradient(top,rgba(0,0,0,0) 0,rgba(0,0,0,.25) 85%,rgba(0,0,0,.25) 100%);
-	// 	background: linear-gradient(to bottom,rgba(0,0,0,0) 0,rgba(0,0,0,.25) 85%,rgba(0,0,0,.25) 100%);
-	// }
-
 	&.full-screen
 	{
 		height: 100%;
@@ -287,11 +275,12 @@ section
 	{
 		height: 100%;
 		line-height: 100%;
-		position: absolute;
-		top: 50%;
-		left: 50%;
-		text-align: center;
-  		transform: translate(-50%, -15%);
+		padding-top: 25%;
+		// position: absolute;
+		// top: 50%;
+		// left: 50%;
+		// text-align: center;
+  // 		transform: translate(-50%, -15%);
 
 		h1, h2, h3
 		{	
